web-dmz/aws_web_dmz_security_group.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Security Group for My Web DMZ",
  "Parameters": {
    "VPC": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VPC where the Security Group will belong",
    },
    "Name": {
      "Type": "String",
      "Description": "Name Tag of the Security Group",
      "Default": "MyWebDMZ"
    },
    "Description": {
      "Type": "String",
      "Description": "Description Tag of the Security Group",
      "Default": "My Web DMZ"
    }
  },
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": {
          "Ref": "Description"
        },
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": "443",
            "ToPort": "443",
            "Description": "HTTPS IPv4"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0",
            "FromPort": "80",
            "ToPort": "80",
            "Description": "HTTP IPv4"
          },
          {
            "IpProtocol": "tcp",
            "CidrIpv6": "::/0",
            "FromPort": "443",
            "ToPort": "443",
            "Description": "HTTPS IPv6"
          },
          {
            "IpProtocol": "tcp",
            "CidrIpv6": "::/0",
            "FromPort": "80",
            "ToPort": "80",
            "Description": "HTTP IPv6"
          }
        ]
      }
    }
  },
  "Outputs": {
    "SecurityGroupID": {
      "Description": "Security Group ID",
      "Value": {
        "Ref": "SecurityGroup"
      }
    }
  }
}
